--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
                 <h1 class="unique">Traversy Media</h1>
             </div>
         </section>
+        <footer><a href="https://github.com/Luizadebrito">By:Lulubrito</a></footer>
         </div>
     </main>
 
